Ensure main content do not have scroll when pullToRefresh animation is visible.

--- a/src/scss/04-patterns/06-utilities/_pull-to-refresh.scss
+++ b/src/scss/04-patterns/06-utilities/_pull-to-refresh.scss
@@ -86,3 +86,17 @@
 		}
 	}
 }
+
+// iOS ---------------------------------------------------------------------------
+///
+.ios {
+	&.ptr-refresh {
+		.layout-native {
+			&.ios-bounce {
+				.main {
+					overflow: hidden;
+				}
+			}
+		}
+	}
+}
